# touchviz

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindLibevdev.cmake
shaders/: circle.frag  simple.vert
src/: main.cpp  multitouch_device.cpp  multitouch_device.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  touch_point.cpp  touch_point.hpp
